added picture and added style sheet

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
  <html>
   <head>
-     <title>Hello World</title>
+     <title>Facts About Me</title>
      <link rel="stylesheet" href="style.css">
  </head>
  <body>
      <h1 class="reverse">Hello World</h1>
      <p>
        Here is a paragraph that contains a few sentences of content.
-     </p>
+   </p>
+
+      <img src="https://placekitten.com/400/400">
+  <a href="https://google.com">Go To Google</a>
  </body>
 </html>
