--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
  <html>
   <head>
-     <title>Facts About Me</title>
+     <title>About Me</title>
      <link rel="stylesheet" href="style.css">
  </head>
  <body>
-     <h1 class="reverse">Hello World</h1>
+     <h1 class="reverse">Facts About Me</h1>
      <p>
-       Here is a paragraph that contains a few sentences of content.
+       Here is a paragraph that contains a few sentences about me. I have a son named sherlock, he's 4 years old and is a Schnauzer. I like to eat anything sweet, and I love ramen. I live with my mom, ad, sister, brother, and my son. I draw comics and little doodles, I usaully post my art on social media.
+               
    </p>
 
       <img src="https://placekitten.com/400/400">
